# Aix-Cortex-v1

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: llm.rs  main.rs  planview.rs  workflow.rs
crates/cli/tests/: dispatch.rs
crates/core/: Cargo.toml
crates/core/src/: guard.rs  journal.rs  lib.rs  plan.rs  transaction.rs  ui.rs
crates/core/tests/: confinement.rs  guarantee.rs  journal.rs  transaction.rs
crates/planner/: Cargo.toml
crates/planner/src/: extract.rs  fuzzy.rs  lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: builtin.rs  lib.rs  loader.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
docs/: cortex.1  launch.md  monetization.md  roadmap.md  safety.md  templates.md
examples/templates/: app-cache-clear.toml  maintenance-page.toml
scripts/: install.sh
