[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/sandbox",
    "crates/policy",
    "crates/registry",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/iPatan7/Aix-Cortex-v1"
authors = ["Cortex contributors"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
nix = { version = "0.29", features = ["mount", "fs", "user", "sched"] }
regex = "1.10"
tempfile = "3"

# Internal crates
cortex-core = { path = "crates/core" }
cortex-policy = { path = "crates/policy" }
cortex-registry = { path = "crates/registry" }
cortex-sandbox = { path = "crates/sandbox" }

# Release profile: a small, fast static binary is a feature.
[profile.release]
opt-level = "z"     # optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
