[package]
name = "cortex-cli"
description = "Cortex: run any DevOps change transactionally, verify it, undo it with proof."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
uuid.workspace = true
cortex-core.workspace = true
cortex-policy.workspace = true
cortex-registry.workspace = true
cortex-sandbox.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
nix.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
