[package]
name = "cortex-core"
description = "Cortex transactional execution engine: OverlayFS sandbox, journaled undo, drift detection."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true
nix.workspace = true
cortex-sandbox.workspace = true

[dev-dependencies]
tempfile.workspace = true
