[package]
name = "cortex-policy"
description = "Deny-by-default authorization gate evaluated inside the privileged binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
