[package]
name = "cortex-registry"
description = "Verified workflow templates: human-written (forward, inverse, verify) triples."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
